POWR-823 format paragraphs and headings

--- a/web/sites/default/config/core.entity_form_display.node.council_meeting.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.council_meeting.default.yml
@@ -48,19 +48,16 @@ content:
     third_party_settings: {  }
     region: content
   field_council_meeting_status:
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_council_meeting_type:
-    weight: 26
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 1
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_notes:
     weight: 5
