--- a/web/sites/default/config/core.entity_view_display.node.council_document.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.teaser.yml
@@ -4,17 +4,110 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.council_document.field_body_content
+    - field.field.node.council_document.field_bureau
+    - field.field.node.council_document.field_commissioner_votes
+    - field.field.node.council_document.field_council_document_status
+    - field.field.node.council_document.field_council_document_type
+    - field.field.node.council_document.field_documents_and_exhibits
+    - field.field.node.council_document.field_efiles_link
+    - field.field.node.council_document.field_introduced_by
     - node.type.council_document
   module:
+    - ds
+    - panelizer
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - node_title
+        - field_council_document_status
+        - field_council_document_type
+        - field_introduced_by
+        - field_bureau
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h4
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.council_document.teaser
 targetEntityType: node
 bundle: council_document
 mode: teaser
 content:
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
+  field_bureau:
+    type: entity_reference_label
+    weight: 4
     region: content
-hidden: {  }
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_council_document_status:
+    type: entity_reference_label
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_council_document_type:
+    type: entity_reference_label
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_introduced_by:
+    type: entity_reference_label
+    weight: 3
+    region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+hidden:
+  content_moderation_control: true
+  field_body_content: true
+  field_commissioner_votes: true
+  field_documents_and_exhibits: true
+  field_efiles_link: true
+  links: true
