--- a/web/sites/default/config/core.entity_view_display.node.council_meeting.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_meeting.default.yml
@@ -47,7 +47,7 @@ content:
             classes: {  }
     region: content
   field_council_meeting_status:
-    weight: 2
+    weight: 0
     label: hidden
     settings:
       link: false
@@ -62,11 +62,18 @@ content:
     type: entity_reference_label
     region: content
   field_council_meeting_type:
-    weight: 6
-    label: above
+    weight: 1
+    label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_notes:
@@ -77,17 +84,24 @@ content:
     type: text_default
     region: content
   field_start_date:
-    weight: 0
+    weight: 2
     label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: datetime_default
     region: content
   field_start_time:
-    weight: 1
-    label: inline
+    weight: 3
+    label: visually_hidden
     settings:
       time_format: 'g:i A'
     third_party_settings:
