--- a/web/sites/default/config/core.entity_view_display.paragraph.council_communication_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.council_communication_item.default.yml
@@ -14,8 +14,8 @@ bundle: council_communication_item
 mode: default
 content:
   field_agenda_item_number:
-    weight: 1
-    label: inline
+    weight: 0
+    label: visually_hidden
     settings:
       thousand_separator: ''
       prefix_suffix: false
@@ -30,7 +30,7 @@ content:
     type: number_integer
     region: content
   field_council_communication_text:
-    weight: 0
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
