--- a/web/sites/default/config/views.view.admin_council_documents.yml
+++ b/web/sites/default/config/views.view.admin_council_documents.yml
@@ -908,7 +908,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: admin/council-meetings/documents
+      path: admin/council/documents
       display_description: ''
       menu:
         type: tab
