--- a/web/sites/default/config/core.entity_view_display.node.council_meeting.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_meeting.teaser.yml
@@ -20,5 +20,9 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_agenda: true
+  field_council_meeting_status: true
+  field_council_meeting_type: true
+  field_notes: true
   field_start_date: true
   field_start_time: true
