--- a/web/sites/default/config/views.view.council_meetings.yml
+++ b/web/sites/default/config/views.view.council_meetings.yml
@@ -1,9 +1,10 @@
 uuid: 85e20007-e8de-43e5-b89a-c853be433e5a
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - field.storage.node.field_council_meeting_status
+    - field.storage.node.field_council_meeting_type
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
     - node.type.council_meeting
@@ -345,6 +346,69 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_council_meeting_type:
+          id: field_council_meeting_type
+          table: node__field_council_meeting_type
+          field: field_council_meeting_type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: false
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         nothing:
           id: nothing
           table: views
@@ -356,7 +420,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"event--summary\">\r\n  <div class=\"row\">\r\n    <div class=\"col-8\">\r\n      <h4>{{ title }}</h4>\r\n      <p>{{ field_council_meeting_status }} {{ field_agenda_type }}</p>\r\n    </div>\r\n    <div class=\"col-4\">\r\n      {{ field_start_time }}\r\n    </div>\r\n  </div>\r\n</div>"
+            text: "<div class=\"event--summary\">\r\n  <div class=\"row\">\r\n    <div class=\"col-8\">\r\n      <h4>{{ title }}</h4>\r\n      <p>{{ field_council_meeting_status }} {{ field_council_meeting_type }}</p>\r\n    </div>\r\n    <div class=\"col-4\">\r\n      {{ field_start_time }}\r\n    </div>\r\n  </div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -489,6 +553,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_council_meeting_status'
+        - 'config:field.storage.node.field_council_meeting_type'
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
         - extensions
@@ -511,6 +576,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_council_meeting_status'
+        - 'config:field.storage.node.field_council_meeting_type'
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
         - extensions
@@ -606,6 +672,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_council_meeting_status'
+        - 'config:field.storage.node.field_council_meeting_type'
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
         - extensions
