POWR-823 clean up admin views a bit

--- a/web/sites/default/config/views.view.admin_council_meetings.yml
+++ b/web/sites/default/config/views.view.admin_council_meetings.yml
@@ -1,23 +1,24 @@
-uuid: 5baaddfc-c800-4c6f-9c80-29c131bb4c2b
+uuid: 385f838a-992b-426a-b2e7-5c55f1d11465
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_council_document_status
-    - field.storage.node.field_council_document_type
-    - node.type.council_document
+    - field.storage.node.field_council_meeting_status
+    - field.storage.node.field_council_meeting_type
+    - field.storage.node.field_start_date
+    - field.storage.node.field_start_time
+    - node.type.council_meeting
     - system.menu.editor-toolbar
-    - taxonomy.vocabulary.council_document_status
-    - taxonomy.vocabulary.council_document_type
     - user.role.administrator
     - user.role.council_clerk
   module:
     - content_moderation
+    - datetime
     - node
-    - taxonomy
+    - time_field
     - user
-id: admin_council_documents
-label: 'Admin: Council documents'
+id: admin_council_meetings
+label: 'Admin: Council meetings'
 module: views
 description: ''
 tag: ''
@@ -92,12 +93,12 @@ display:
           description: ''
           columns:
             title: title
-            field_council_document_status: field_council_document_status
-            field_council_document_type: field_council_document_type
+            field_start_date: field_start_date
+            field_start_time: field_start_time
+            changed: changed
             status: status
             moderation_state: moderation_state
             operations: operations
-            changed: changed
           info:
             title:
               sortable: true
@@ -106,14 +107,21 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            field_council_document_status:
+            field_start_date:
               sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            field_council_document_type:
+            field_start_time:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            changed:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -139,14 +147,7 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            changed:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-          default: changed
+          default: field_start_date
           empty_table: false
       row:
         type: fields
@@ -165,7 +166,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Document name'
+          label: 'Meeting name'
           exclude: false
           alter:
             alter_text: false
@@ -223,14 +224,141 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: field
-        field_council_document_status:
-          id: field_council_document_status
-          table: node__field_council_document_status
-          field: field_council_document_status
+        field_start_date:
+          id: field_start_date
+          table: node__field_start_date
+          field: field_start_date
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Document status'
+          label: Date
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: datetime_default
+          settings:
+            timezone_override: ''
+            format_type: month_day_year
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_start_time:
+          id: field_start_time
+          table: node__field_start_time
+          field: field_start_time
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Start time'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: time_formatter
+          settings:
+            time_format: 'g:i A'
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_council_meeting_type:
+          id: field_council_meeting_type
+          table: node__field_council_meeting_type
+          field: field_council_meeting_type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Type
           exclude: false
           alter:
             alter_text: false
@@ -286,14 +414,14 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_council_document_type:
-          id: field_council_document_type
-          table: node__field_council_document_type
-          field: field_council_document_type
+        field_council_meeting_status:
+          id: field_council_meeting_status
+          table: node__field_council_meeting_status
+          field: field_council_meeting_status
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Document type'
+          label: Status
           exclude: false
           alter:
             alter_text: false
@@ -607,7 +735,7 @@ display:
           admin_label: ''
           operator: in
           value:
-            council_document: council_document
+            council_meeting: council_meeting
           group: 1
           exposed: false
           expose:
@@ -683,102 +811,6 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: string
-        field_council_document_status_target_id:
-          id: field_council_document_status_target_id
-          table: node__field_council_document_status
-          field: field_council_document_status_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_council_document_status_target_id_op
-            label: 'Document status'
-            description: ''
-            use_operator: false
-            operator: field_council_document_status_target_id_op
-            identifier: field_council_document_status_target_id
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: select
-          limit: true
-          vid: council_document_status
-          hierarchy: false
-          error_message: true
-          plugin_id: taxonomy_index_tid
-        field_council_document_type_target_id:
-          id: field_council_document_type_target_id
-          table: node__field_council_document_type
-          field: field_council_document_type_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_council_document_type_target_id_op
-            label: 'Document type'
-            description: ''
-            use_operator: false
-            operator: field_council_document_type_target_id_op
-            identifier: field_council_document_type_target_id
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: select
-          limit: true
-          vid: council_document_type
-          hierarchy: false
-          error_message: true
-          plugin_id: taxonomy_index_tid
         status:
           id: status
           table: node_field_data
@@ -865,8 +897,20 @@ display:
             group_items: {  }
           entity_type: node
           plugin_id: moderation_state_filter
-      sorts: {  }
-      title: 'Council documents'
+      sorts:
+        field_start_time_value:
+          id: field_start_time_value
+          table: node__field_start_time
+          field: field_start_time_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
+      title: 'Council meetings'
       header:
         result:
           id: result
@@ -876,7 +920,7 @@ display:
           group_type: group
           admin_label: ''
           empty: true
-          content: "<a href=\"/node/add\" class=\"button btn-cta\">Add content</a>\r\n<p class=\"muted\">Use to add council meetings or documents.</p>\r\n<p>Displaying @start - @end of @total</p>"
+          content: "<a href=\"/node/add\" class=\"button btn-cta\">Add content</a>\r\n<p class=\"muted\">Add a council meeting or document.</p>\r\n<p>Displaying @start - @end of @total</p>"
           plugin_id: result
       footer: {  }
       empty: {  }
@@ -894,30 +938,31 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user
         - 'user.node_grants:view'
         - user.roles
       tags:
-        - 'config:field.storage.node.field_council_document_status'
-        - 'config:field.storage.node.field_council_document_type'
+        - 'config:field.storage.node.field_council_meeting_status'
+        - 'config:field.storage.node.field_council_meeting_type'
+        - 'config:field.storage.node.field_start_date'
+        - 'config:field.storage.node.field_start_time'
         - 'config:workflow_list'
         - extensions
   page_1:
     display_plugin: page
     id: page_1
-    display_title: 'Page: Proposed'
+    display_title: Page
     position: 1
     display_options:
       display_extenders: {  }
-      path: council/documents/admin
+      path: council/meetings/admin
       display_description: ''
       menu:
         type: normal
-        title: 'Council documents'
+        title: 'Council meetings'
         description: ''
         expanded: false
         parent: ''
-        weight: 57
+        weight: 55
         context: '0'
         menu_name: editor-toolbar
       tab_options:
@@ -932,11 +977,12 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user
         - 'user.node_grants:view'
         - user.roles
       tags:
-        - 'config:field.storage.node.field_council_document_status'
-        - 'config:field.storage.node.field_council_document_type'
+        - 'config:field.storage.node.field_council_meeting_status'
+        - 'config:field.storage.node.field_council_meeting_type'
+        - 'config:field.storage.node.field_start_date'
+        - 'config:field.storage.node.field_start_time'
         - 'config:workflow_list'
         - extensions
