--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -85,7 +85,7 @@ display:
               field: field_start_date
               rendered: true
               rendered_strip: false
-          row_class: mb-5
+          row_class: ''
           default_row_class: false
       row:
         type: fields
@@ -964,7 +964,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time">{{ field_all_day }}</p>'
+            text: '{{ field_all_day }}'
             make_link: false
             path: ''
             absolute: false
@@ -1092,7 +1092,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time">{{ field_start_time }}{{ field_end_time }}</p>'
+            text: '{{ field_start_time }}{{ field_end_time }}'
             make_link: false
             path: ''
             absolute: false
@@ -1283,7 +1283,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"event--summary\">\r\n  <div class=\"row\">\r\n    <div class=\"col-8\">\r\n      <h4>{{ title }}</h4>\r\n      <p>{{ field_summary }}</p>\r\n    </div>\r\n    <div class=\"col-4\">\r\n      {{ field_all_day }}{{ field_start_time }}\r\n    </div>\r\n  </div>\r\n</div>"
+            text: "<div class=\"event--summary mb-4\">\r\n  <div class=\"row\">\r\n    <div class=\"col-12 col-md-8\">\r\n      <h3>{{ title }}</h3>\r\n      <span class=\"event--time mb-1\">\r\n        {{ field_all_day }}{{ field_start_time }}\r\n      </span>\r\n    </div>\r\n  </div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -1472,7 +1472,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<h3>{{ field_start_date }} {{ field_end_date }}</h3>'
+            text: '<h2>{{ field_start_date }} {{ field_end_date }}</h2>'
             make_link: false
             path: ''
             absolute: false
@@ -1536,7 +1536,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time">{{ field_all_day }}</p>'
+            text: '{{ field_all_day }}'
             make_link: false
             path: ''
             absolute: false
@@ -1664,7 +1664,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time">{{ field_start_time }}{{ field_end_time }}</p>'
+            text: '{{ field_start_time }}{{ field_end_time }}'
             make_link: false
             path: ''
             absolute: false
@@ -1855,7 +1855,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"event--summary\">\r\n  <div class=\"row\">\r\n    <div class=\"col-8\">\r\n      <h4>{{ title }}</h4>\r\n      <p>{{ field_summary }}</p>\r\n    </div>\r\n    <div class=\"col-4\">\r\n      {{ field_all_day }}{{ field_start_time }}\r\n    </div>\r\n  </div>\r\n</div>"
+            text: "<div class=\"event--summary mb-4\">\r\n  <div class=\"row\">\r\n    <div class=\"col-12 col-md-8\">\r\n      <h3>{{ title }}</h3>\r\n      <span class=\"event--time mb-1\">\r\n        {{ field_all_day }}{{ field_start_time }}\r\n      </span>\r\n    </div>\r\n  </div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
