Updated the help text.
Updating help text for adding a video from youtube to include instructions about captioning.

--- a/web/sites/default/config/media.type.video.yml
+++ b/web/sites/default/config/media.type.video.yml
@@ -12,7 +12,7 @@ _core:
   default_config_hash: CDRaWPhGJXLhi1p3SiKLfu8Qq7S8OB3oG3DroYiiDjk
 id: video
 label: Video
-description: 'A video hosted by YouTube or Vimeo. Video added to the site must include closed captioning for accessibility within 5 days of publishing.'
+description: 'Videos hosted by YouTube have access to free and easy captioning. Be sure to review and edit automatic captions provided by YouTube for accuracy. Videos added to the site must include closed captioning for accessibility within 5 days of publishing.'
 source: video_embed_field
 queue_thumbnail_downloads: false
 new_revision: false
