POWR-380 Add several modules for embedding

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -44,6 +44,7 @@ module:
   easy_breadcrumb: 0
   editor: 0
   embed: 0
+  embederator: 0
   entity_block: 0
   entity_browser: 0
   entity_browser_entity_form: 0
@@ -68,6 +69,7 @@ module:
   hal: 0
   help: 0
   history: 0
+  iframe: 0
   image: 0
   image_widget_crop: 0
   inline_entity_form: 0
@@ -154,6 +156,8 @@ module:
   sendgrid_integration: 0
   serialization: 0
   shortcut: 0
+  simple_gmap: 0
+  soembed: 0
   switch_page_theme: 0
   system: 0
   taxonomy: 0
