--- a/web/sites/default/config/seckit.settings.yml
+++ b/web/sites/default/config/seckit.settings.yml
@@ -7,7 +7,7 @@ seckit_xss:
     object-src: ''
     img-src: ''
     media-src: ''
-    frame-src: '''self'' https://www.youtube.com/embed/'
+    frame-src: '''self'' https://www.youtube.com/embed/ https://*.google.com/ https://player.vimeo.com/video/ https://arcg.is/ https://www.arcgis.com/apps/webappviewer/'
     frame-ancestors: ''
     child-src: ''
     font-src: ''
