--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.1",
         "drupal/easy_breadcrumb": "^1.8",
+        "drupal/embederator": "2.x-dev",
         "drupal/eva": "^1.3",
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
@@ -65,6 +66,7 @@
         "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
         "drupal/groupmedia": "^2.0",
+        "drupal/iframe": "^1.9",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
         "drupal/link_class": "^1.3",
@@ -90,6 +92,8 @@
         "drupal/search_api_solr": "1.x-dev",
         "drupal/seckit": "^1.1",
         "drupal/sendgrid_integration": "^1.2",
+        "drupal/simple_gmap": "^1.4",
+        "drupal/soembed": "^1.0@beta",
         "drupal/switch_page_theme": "^1.0",
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
@@ -199,6 +203,9 @@
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
+            },
+            "drupal/soembed": {
+                "2954698 - Call to undefined function Drupal\\soembed\\Plugin\\Filter\\variable_get()": "https://www.drupal.org/files/issues/2018-03-20/2954698_variable_get_composer.patch"
             },
             "drupal/menu_link": {
                 "3019509 - Menu item without attributes causes a notice": "https://www.drupal.org/files/issues/2018-12-10/menu_link-attributes-error-3019509-3.patch"
