--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -6,6 +6,7 @@ dependencies:
     - editor
     - entity_embed
     - portland_media_embed_helper
+    - soembed
 name: 'Simplified editor with media embed'
 format: simplified_editor_with_media_embed
 weight: 0
@@ -86,3 +87,12 @@ filters:
     status: true
     weight: -49
     settings: {  }
+  filter_soembed:
+    id: filter_soembed
+    provider: soembed
+    status: true
+    weight: 0
+    settings:
+      soembed_providers: "#https?://(www\\.)?youtube.com/watch.*#i | http://www.youtube.com/oembed | true\r\n#https?://youtu\\.be/.*#i | http://www.youtube.com/oembed | true \r\n#https?://(www\\.)?vimeo\\.com/.*#i | http://vimeo.com/api/oembed.json | true\r\n#http://(www\\.)?hulu\\.com/watch/.*#i | http://www.hulu.com/api/oembed.json | true \r\n#https?://(www\\.)?twitter.com/.+?/status(es)?/.*#i | https://api.twitter.com/1/statuses/oembed.json | true \r\n#https?://(www\\.)?instagram.com/p/.*#i | https://api.instagram.com/oembed | true\r\n#https?://maps.google.com/maps.*#i | google-maps | LOCAL\r\n#https?://www.google.com/maps/.*#i | google-maps | LOCAL\r\n#https?://docs.google.com/(document|spreadsheet)/.*#i | google-docs | LOCAL"
+      soembed_maxwidth: '500'
+      soembed_replace_inline: '0'
