POWR-380 Try CircleCI fix.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ restore_cache: &restore_cache
   keys:
   - v1-dependencies-{{ checksum "composer.lock" }}
   # fallback to using the latest cache if no exact match is found
-  - v1-dependencies-
+  # - v1-dependencies-
 
 ## Defines the cache saving mechanism.
 save_cache: &save_cache
